--- a/server/package.json
+++ b/server/package.json
@@ -3,15 +3,8 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "axios": "^1.3.5",
-    "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "nodemon": "^2.0.22",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "nodemon": "^2.0.22"
   }
 }
