--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
     "nodemon": "^2.0.22"
